# ds210

./: Dockerfile  README.md  model_pipeline.pkl  pyproject.toml
.github/workflows/: base-actions.yaml  gke-actions.yaml  minikube-actions.yaml
infra/: .temp.swp  deployment-pythonapi.yaml  service-prediction.yaml  service-redis.yaml
src/: housing_predict.py  main.py
tests/: test_src.py
