[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {version = "^0.112.2", extras = ["all"]}
joblib = "1.4.2"
scikit-learn = "1.5.2"
fastapi-cache2 = {version = "0.1.9", extras = ["redis"]} 

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.2"
pytest-asyncio = "0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
asyncio_default_fixture_loop_scope = "function"
